# wanandroid-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: window.rs
src/api/: home.ts  index.ts  navigation.ts  project.ts  qa.ts  request.ts  search.ts  square.ts  system.ts  user.ts  wechat.ts
src/assets/: main.css
src/components/: ArticleCard.vue  Sidebar.vue  TitleBar.vue
src/router/: index.ts
src/stores/: app.ts  theme.ts  user.ts
src/types/: api.ts  tauri.ts
src/utils/: url.ts
src/views/article/: index.vue
src/views/category/: index.vue
src/views/collect/: index.vue
src/views/hierarchy/: index.vue
src/views/home/: index.vue
src/views/navigation/: index.vue
src/views/profile/: index.vue
src/views/projects/: index.vue
src/views/qa/: index.vue
src/views/rank/: index.vue
src/views/square/: index.vue
src/views/wechat/: index.vue
