[package]
name = "wanandroid-tauri"
version = "1.0.0"
description = "WanAndroid Desktop Application"
authors = ["you"]
edition = "2021"

[lib]
name = "wanandroid_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2", features = ["native-tls"] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
